$Id$

****************************** DRUPAL 6 - 2.x BRANCH ********************************

July 21, 2009
-------------
#523422 by Michelle: Fixed wrong location variable name.

July 20, 2009
------------
#523942 by Michelle: Normalized table widths on forum listing.
#520694 by Michelle: Improved layout on narrow themes.
NOISSUE by Michelle: Many small changes to styles, fixing layout, markup and style, making Naked nakeder, etc.
#523958 by merlinofchaos: Added new style Cloudless Day.
#525460 by Michelle, robertdjung: Removed extra slash from CSS path.
#523958 by Michelle, merlinofchaos: Small change to sats borders in CD.

July 15, 2009
------------
#276577 by Michelle: Added taxonomy image support for main forum listing.
NOISSUE by Michelle: Lost adding in $node_classes / $comment_classes when I restructured the $classes variable. Putting that back.

July 14, 2009
------------
#497450 by Michelle: Changed topic legend classes to match classes in topic icons themselves. The names aren't as clear but it's more consistant.
#497450 by Michelle: Cleaned up and re-organized image css, including removing all images from Naked's CSS except forum folder / topic icons.
NOISSUE by Michelle: Cleaned up Author Pane of stacked styles.
NOISSUE by Michelle: More cleaning up of blue lagoon stacked. Also made it the default style since it looks most like modern forums.

July 13, 2009
------------
#500988 by Michelle: Now works without nodecomment.
#500988 by Michelle: Some work on getting AF to work without NC.
NOISSUE by Michelle: Various notice fixes.
#497450 by Michelle: More work on Author Pane image conversion.
#512222 by Michelle: Fixed typo preventing 'submitted' template from being found.
#515966 by Michelle: Moved topic navigation out of node content and down to bottom of topic.
NOISSUE by Michelle: Fixed post reply button incorrectly showing up at the bottom of topic when using nodecomment.