@@ -1,24 +1,41 @@
 /* FORUM LIST ICONS *********************************************************/
-.forum-folder {
-  background: transparent url(images/forum-folder.png) no-repeat center center;
+#forum td.forum-icon {
+  text-indent: -9999px;
+  width: 50px;
 }
 
-
-/* FORUM LIST ICON LEGEND ***************************************************/
-.forum-folder-legend .forum-folder {
-  background: transparent url(images/forum-folder.png) no-repeat top left;
+.forum-folder {
+  background: transparent url(images/forum-folder.png) no-repeat center center;
 }
 
 .forum-folder-new-posts {
   background: transparent url(images/forum-folder-new-posts.png) no-repeat center center;
 }
 
+.forum-folder-locked {
+  background: transparent url(images/forum-folder-locked.png) no-repeat center center;
+}
+
+/* FORUM LIST ICON LEGEND ***************************************************/
+.forum-folder-legend .forum-folder {
+  background: transparent url(images/forum-folder.png) no-repeat top left;
+}
+
 .forum-folder-legend .forum-folder-new-posts {
   background: transparent url(images/forum-folder-new-posts.png) no-repeat top left;
 }
 
+.forum-folder-legend .forum-folder-locked {
+  background: transparent url(images/forum-folder-locked.png) no-repeat top left;
+}
 
 /* TOPIC LIST ICONS *********************************************************/
+#forum span.topic-icon {
+  width: 24px;
+  height: 24px;
+  text-indent: -9999px;
+}
+
 .topic-icon-default {
   background: transparent url(images/topic-default.png) no-repeat center center;
 }
@@ -42,7 +59,6 @@
 .topic-icon-closed {
   background: transparent url(images/topic-closed.png) no-repeat center center;
 }
-
 
 /* TOPIC LIST ICON LEGEND ***************************************************/
 .topic-icon-default {
@@ -69,9 +85,8 @@
   background: transparent url(images/topic-closed.png) no-repeat top left;
 }
 
-
 /* AUTHOR PANE **************************************************************/
-.author-online {
+.forum-post-panel-sub .author-online {
   background: transparent url(images/author-pane/user-online.png) no-repeat;
   padding-left: 20px;
   height: 20px;
@@ -79,7 +94,7 @@
   display: block;
 }
 
-.author-offline {
+.forum-post-panel-sub .author-offline {
   background: transparent url(images/author-pane/user-offline.png) no-repeat;
   padding-left: 20px;
   height: 20px;
@@ -87,7 +102,7 @@
   display: block;
 }
 
-.author-email-icon {
+.forum-post-panel-sub .author-email-icon {
   background: transparent url(images/author-pane/contact.png) no-repeat;
   padding-left: 26px;
   height: 20px;
@@ -95,7 +110,7 @@
   display: block;
 }
 
-.author-privatemsg-icon {
+.forum-post-panel-sub .author-privatemsg-icon {
   background: transparent url(images/author-pane/private-message.png) no-repeat;
   padding-left: 26px;
   height: 20px;
@@ -103,7 +118,8 @@
   display: block;
 }
 
-.author-relationship-add-icon {
+.forum-post-panel-sub .author-relationship-add-icon,
+.forum-post-panel-sub .author-flag-friend-add-icon {
   background: transparent url(images/author-pane/buddy-add.png) no-repeat;
   padding-left: 26px;
   height: 20px;
@@ -111,7 +127,8 @@
   display: block;
 }
 
-.author-relationship-remove-icon {
+.forum-post-panel-sub .author-relationship-remove-icon,
+.forum-post-panel-sub .author-flag-friend-remove-icon  {
   background: transparent url(images/author-pane/buddy-remove.png) no-repeat;
   padding-left: 26px;
   height: 20px;
@@ -121,103 +138,105 @@
 
 
 /* TEXT REPLACEMENT IMAGES - ENGLISH ***************************************/
+
 /* Post new topic options on topic listings */
-.en .forum-links .forum span {
-  background: transparent url(images/en/new-topic.png) no-repeat;
+.en .forum-primary-links .forum-links li a {
+  display: block;
+  float: left;
+  width: 95px;
+  height: 30px;
+  position: relative;
+  margin: 0; 
+  padding: 0 25px 0 0;
+}
+
+.en .forum-primary-links span.image-replace {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1; /*for Opera 5 and 6*/
   height: 30px;
   width: 95px;
 }
 
-.en .forum-links .poll span {
+.en .forum-primary-links .forum span.image-replace {
+  background: transparent url(images/en/new-topic.png) no-repeat;
+}
+
+.en .forum-primary-links .poll span.image-replace {
   background: transparent url(images/en/new-poll.png) no-repeat;
-  height: 30px;
-  width: 95px;
 }
 
 /* New topic / locked on top / bottom of topics */
-.en .reply-allowed span {
-  background: transparent url(images/en/post-reply.png) no-repeat;
+.en .reply-link {
+  position: relative;
+  width: 95px;
+  height: 30px;
+  padding: 0 25px 0 0;
+}
+
+.en .reply-link span {
+  display: block;
+  position: absolute;
+  top: 5px;
+  left: 0;
+  z-index: 1; /*for Opera 5 and 6*/
   height: 30px;
   width: 95px;
+}
+
+.en .reply-allowed span {
+  background: transparent url(images/en/post-reply.png) no-repeat;
 }
 
 .en .reply-locked span {
   background: transparent url(images/en/locked-topic.png) no-repeat;
-  height: 30px;
-  width: 95px;
 }
 
 /* Post links */
+.en .comment_add a,
+.en .comment_reply a,
+.en .quote a,
+.en .comment_edit a,
+.en .post_edit a,
+.en .comment_delete a,
+.en .post_delete a {
+  text-decoration: none;
+  display: block;
+  float: right;
+  height: 16px;
+  width: 50px;
+  padding-right: 5px;
+}
+
+.en .comment_add span,
+.en .comment_reply span,
+.en .quote span,
+.en .comment_edit span,
+.en .post_edit span,
+.en .comment_delete span,
+.en .post_delete span {
+  height: 16px;
+  width: 50px;
+}
+
 .en .comment_add span,
 .en .comment_reply span {
   background: transparent url(images/en/reply.png) no-repeat;
-  height: 16px;
-  width: 50px;
 }
 
 .en .quote span {
   background: transparent url(images/en/quote.png) no-repeat;
-  height: 16px;
-  width: 50px;
 }
 
 .en .comment_edit span,
 .en .post_edit span {
   background: transparent url(images/en/edit.png) no-repeat;
-  height: 16px;
-  width: 50px;
 }
 
 .en .comment_delete span,
 .en .post_delete span {
   background: transparent url(images/en/delete.png) no-repeat;
-  height: 16px;
-  width: 50px;
 }
 
-/* TEXT REPLACEMENT IMAGES - FRENCH ****************************************/
-/* Post new topic options on topic listings */
-.fr .forum-links .forum span {
-  background: transparent url(images/fr/fr_new-topic.png) no-repeat;
-  height: 30px;
-  width: 95px;
-}
-
-.fr .forum-links .poll span {
- /* New poll button not provided in this translation */
-}
-
-/* New topic / locked on top / bottom of topics */
-.fr .reply-allowed span {
-  background: transparent url(images/fr/fr_post-reply.png) no-repeat;
-  height: 30px;
-  width: 95px;
-}
-
-.fr .reply-locked span {
-  background: transparent url(images/fr/fr_locked-topic.png) no-repeat;
-  height: 30px;
-  width: 95px;
-}
-
-/* Post links */
-.fr .comment_add span,
-.fr .comment_reply span {
-  background: transparent url(images/fr/fr_reply.png) no-repeat;
-  height: 16px;
-  width: 50px;
-}
-
-.fr .comment_edit span {
-  background: transparent url(images/fr/fr_edit.png) no-repeat;
-  height: 16px;
-  width: 50px;
-}
-
-.fr .comment_delete span {
-  background: transparent url(images/fr/fr_delete.png) no-repeat;
-  height: 16px;
-  width: 50px;
-}
-
- 
